feat: native code — zig cc, java.lang.foreign, and a SQLite binding
The bridge to C, proved on something real rather than a hello world.
`tuul build` now compiles native/ before src/, because the C is what the
Java is compiled and run against.

- native/sqlite3: the SQLite amalgamation, 3.50.4, vendored unmodified.
  Committed rather than fetched, for the same reason vendor/ is: a fresh
  clone builds without touching the network. Extra compiler arguments
  live in native/sqlite3/cflags, one per line — a list of arguments, not
  a configuration language.

- project.Native compiles each module with zig cc, falling back to the
  system cc. A directory under native/ is a library, and so is a loose .c
  file; both land in build/native under the name the platform expects.
  Nothing is recompiled unless a source changed, because the amalgamation
  takes ten seconds and a build that costs that every time is a build
  nobody runs.

- ffi.Library opens a shared library and hands out downcall handles. It
  looks in build/native first and the system path second, and holds the
  library against the global arena so a handle can never outlive what it
  points at.

- sqlite binds the amalgamation: open, execute with bound parameters,
  and a cursor that reads one row at a time. Rows are never collected
  into a list on the way past, so a query over ten thousand rows costs
  one row of memory. Sqlite.java is the C API as C spells it, written
  out by hand — a wrong descriptor is a compile error, not a mystery at
  run time.

- tuul new now scaffolds the reference the README describes:
  native/hello.c takes a function pointer, src/greet/Greeter.java hands
  it a Java method as an upcall stub, and every greeting the entrypoint
  prints has been out to C and back.

Projects run with --enable-native-access=ALL-UNNAMED: a project is
expected to bind to its own C, and a warning on every run is not a thing
anyone should have to read.

140 checks in `mise run test`, 26 in `mise run self-t